// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton should change avatar shape when using avatar-shape prop 1`] = `
<div
  class="rc-skeleton__avatar rc-skeleton__avatar--square"
/>
`;

exports[`Skeleton should change avatar size when using avatar-size prop: 20rem 1`] = `"20rem"`;

exports[`Skeleton should change avatar size when using avatar-size prop: 20ren 1`] = `"20rem"`;

exports[`Skeleton should render default slot when loading is false 1`] = `
<div>
  <div>
    Content
  </div>
</div>
`;

exports[`Skeleton should render with row height array correctly 1`] = `
<div>
  <div
    class="rc-skeleton rc-skeleton--animate rc-skeleton--round"
  >
    <div
      class="rc-skeleton__content"
    >
      <div
        class="rc-skeleton__row"
        style="width: 100%; height: 10px;"
      />
      <div
        class="rc-skeleton__row"
        style="width: 100%; height: 30px;"
      />
      <div
        class="rc-skeleton__row"
        style="width: 100%; height: 1rem;"
      />
      <div
        class="rc-skeleton__row"
        style="width: 60%;"
      />
    </div>
  </div>
</div>
`;

exports[`Skeleton should render with row width array correctly 1`] = `
<div>
  <div
    class="rc-skeleton rc-skeleton--animate rc-skeleton--round"
  >
    <div
      class="rc-skeleton__content"
    >
      <div
        class="rc-skeleton__row"
        style="width: 100%;"
      />
      <div
        class="rc-skeleton__row"
        style="width: 30px;"
      />
      <div
        class="rc-skeleton__row"
        style="width: 5rem;"
      />
      <div
        class="rc-skeleton__row"
      />
    </div>
  </div>
</div>
`;
